# visualservoing

./: CMakeLists.txt  README.md  robot.cpp
c++/: CMakeLists.txt  package.xml  robot.cpp  robot.h  robotController.cpp  robotController.h  ur3.cpp  ur3.h  velocityController.cpp  velocityController.h
config/: rviz_camera.rviz  servo_vector.rviz
launch/: aruco_handheld.launch  aruco_marker_finder.launch  aruco_marker_sim.launch  cameraRviz.launch  ur3.launch  vectorRviz.launch  visual_servoing.launch
matlab/: Controller.m  Main.m  controller.m  test.m
matlab/Peter Cork Toolbox/rvctools/robot/: startup_rtb.m
models/: sim.world
sensors_control_sim/: CMakeLists.txt  package.xml
sensors_control_sim/launch/: d435_arUco.launch  gazebo.launch  load_ur.launch.xml  load_ur3.launch.xml  ur3_d435.launch
sensors_control_sim/urdf/: _d435.urdf.xacro  ur.xacro  ur3.xacro  ur3_d435.urdf.xacro  ur3_macro.xacro
sensors_control_sim/world/: d435_aruco.world  sim_world.world  ur3_servo.world
src/: aruco_rgbd.py  main.cpp  moveMarker.py  robot.cpp  robot.h  robotController.cpp  robotController.h  servoViz.py  test.py
src/include/: airplane.stl
src/newAttempt/: RobotControl.py  Velocity.py  test.py
test/: CMakeLists.txt  robotControllerTests.cpp  robotTests.cpp
